--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +17,7 @@
         android:theme="@style/Theme.StudentInformationManagement"
         tools:targetApi="31">
         <activity
-            android:name=".AddCertificateActivity"
+            android:name=".ImportFileActivity"
             android:exported="false" />
         <activity
             android:name=".CertificateListActivity"
